--- a/Admin/orders.html
+++ b/Admin/orders.html
@@ -349,13 +349,83 @@
                 </tr>
               </thead>
               <tbody id="od-body">
+                <!-- DỮ LIỆU MẪU TĨNH (luôn luôn có) -->
                 <tr>
-                  <td
-                    colspan="8"
-                    style="text-align: center; color: #9aa3ad; padding: 20px"
-                  >
-                    Đang tải…
+                  <td><b>OD-20241028-001</b></td>
+                  <td>2024-10-28</td>
+                  <td>
+                    Nguyễn Văn A<br /><span class="small">0900000001</span>
                   </td>
+                  <td>
+                    12 Lê Lợi,<br />
+                    Phường Bến Nghé, Quận 1, TP. HCM
+                  </td>
+                  <td style="text-align: right">3</td>
+                  <td style="text-align: right">430.000</td>
+                  <td>
+                    <span class="status-chip st-new">Chưa xử lý</span>
+                  </td>
+                  <td>—</td>
+                </tr>
+                <tr>
+                  <td><b>OD-20241029-002</b></td>
+                  <td>2024-10-29</td>
+                  <td>Trần Thị B<br /><span class="small">0900000002</span></td>
+                  <td>
+                    45 Nguyễn Huệ,<br />
+                    Phường Bến Nghé, Quận 1, TP. HCM
+                  </td>
+                  <td style="text-align: right">2</td>
+                  <td style="text-align: right">440.000</td>
+                  <td>
+                    <span class="status-chip st-new">Chưa xử lý</span>
+                  </td>
+                  <td>—</td>
+                </tr>
+                <tr>
+                  <td><b>OD-20241101-003</b></td>
+                  <td>2024-11-01</td>
+                  <td>Lê Quốc C<br /><span class="small">0900000003</span></td>
+                  <td>
+                    23 Cách Mạng Tháng 8,<br />
+                    Phường 11, Quận 3, TP. HCM
+                  </td>
+                  <td style="text-align: right">1</td>
+                  <td style="text-align: right">250.000</td>
+                  <td>
+                    <span class="status-chip st-confirmed">Đã xác nhận</span>
+                  </td>
+                  <td>—</td>
+                </tr>
+                <tr>
+                  <td><b>OD-20241102-004</b></td>
+                  <td>2024-11-02</td>
+                  <td>Phạm Thị D<br /><span class="small">0900000004</span></td>
+                  <td>
+                    89 Trường Chinh,<br />
+                    Phường Tây Thạnh, Tân Phú, TP. HCM
+                  </td>
+                  <td style="text-align: right">2</td>
+                  <td style="text-align: right">360.000</td>
+                  <td>
+                    <span class="status-chip st-delivered">Đã giao</span>
+                  </td>
+                  <td>—</td>
+                </tr>
+                <tr>
+                  <td><b>OD-20241103-005</b></td>
+                  <td>2024-11-03</td>
+                  <td>Đỗ Văn E<br /><span class="small">0900000005</span></td>
+                  <td>
+                    56 Phan Đăng Lưu,<br />
+                    Phường 5, Phú Nhuận, TP. HCM
+                  </td>
+                  <td style="text-align: right">1</td>
+                  <td style="text-align: right">270.000</td>
+                  <td>
+                    <span class="status-chip st-canceled">Đã huỷ</span>
+                  </td>
+                  <td>—</td>
                 </tr>
               </tbody>
             </table>
