--- a/Admin/login.html
+++ b/Admin/login.html
@@ -118,27 +118,29 @@
         </div>
       </div>
 
-      <form id="adminLoginForm" novalidate>
+      <!-- Form tắt autofill, không placeholder, không value -->
+      <form
+        id="adminLoginForm"
+        autocomplete="off"
+        spellcheck="false"
+        novalidate
+      >
         <label for="username">Tài khoản</label>
         <input
           id="username"
-          name="username"
+          name="adm_user"
           type="text"
-          autocomplete="username"
+          autocomplete="off"
           required
-          placeholder="quanly1"
-          value="quanly1"
         />
 
         <label for="password">Mật khẩu</label>
         <input
           id="password"
-          name="password"
+          name="adm_pass"
           type="password"
-          autocomplete="current-password"
+          autocomplete="new-password"
           required
-          placeholder="••••••••"
-          value="abcd1234"
         />
 
         <div class="row">
@@ -149,10 +151,10 @@
     </main>
 
     <script>
-      // Tài khoản quản trị cố định (đúng yêu cầu)
+      // Tài khoản quản trị cố định
       const ADMIN_USER = {
         username: "quanly1",
-        password: "abcd1234",
+        password: "1234abcd",
         role: "admin",
       };
 
@@ -165,14 +167,6 @@
           if (u && u.role === "admin") location.replace("./index.html");
         } catch {}
       })();
-
-      // Ép điền sẵn mỗi lần mở trang (phòng trường hợp browser xóa autofill)
-      document.addEventListener("DOMContentLoaded", () => {
-        const u = document.getElementById("username");
-        const p = document.getElementById("password");
-        if (u && !u.value) u.value = ADMIN_USER.username;
-        if (p && !p.value) p.value = ADMIN_USER.password;
-      });
 
       const form = document.getElementById("adminLoginForm");
       const errEl = document.getElementById("err");
@@ -193,6 +187,7 @@
           errEl.textContent = "Sai tài khoản hoặc mật khẩu quản trị.";
           return;
         }
+
         // Clear session cũ (nếu có)
         try {
           sessionStorage.removeItem("session.user");
