--- a/Admin/pricing.html
+++ b/Admin/pricing.html
@@ -204,16 +204,65 @@
                 display: flex;
                 align-items: center;
                 gap: 10px;
-                padding: 10px 12px;
-                border: 1px solid #2a2f8a;
+                padding: 6px 0;
                 border-radius: 12px;
-                background: #fff;
-                color: #1f235a;
-                font-weight: 700;
+                /* ❌ không background, không viền nữa */
+                background: transparent;
+                border: 0;
+                color: #e5e7eb;
+                font-weight: 500;
+                cursor: default;
               "
             >
-              <i class="fa-solid fa-user-shield"></i>
-              <span>Chào mừng, Admin</span>
+              <!-- Avatar tròn có chữ cái đầu -->
+              <div
+                id="sb-admin-avatar"
+                style="
+                  width: 34px;
+                  height: 34px;
+                  border-radius: 999px;
+                  background: #f59e0b;
+                  color: #111827;
+                  display: flex;
+                  align-items: center;
+                  justify-content: center;
+                  font-weight: 700;
+                  font-size: 15px;
+                  flex-shrink: 0;
+                "
+              >
+                A
+              </div>
+
+              <!-- Tên + role -->
+              <div
+                style="display: flex; flex-direction: column; overflow: hidden"
+              >
+                <span
+                  id="sb-admin-username"
+                  style="
+                    font-weight: 700;
+                    font-size: 14px;
+                    line-height: 1.2;
+                    white-space: nowrap;
+                    text-overflow: ellipsis;
+                    overflow: hidden;
+                  "
+                  >admin</span
+                >
+                <span
+                  id="sb-admin-role"
+                  style="
+                    font-size: 12px;
+                    color: #9ca3af;
+                    line-height: 1.3;
+                    white-space: nowrap;
+                    text-overflow: ellipsis;
+                    overflow: hidden;
+                  "
+                  >Quản trị viên</span
+                >
+              </div>
             </div>
           </li>
 
