--- a/sanpham/sanpham.html
+++ b/sanpham/sanpham.html
@@ -541,7 +541,7 @@
         <div class="header-main">
           <div class="header-left">
             <form
-              action="/search"
+              action="./sanpham.html"
               method="get"
               class="search-bar"
               autocomplete="off"
