--- a/News_Section/gold_digger.html
+++ b/News_Section/gold_digger.html
@@ -296,7 +296,7 @@
         <div class="header-main">
           <div class="header-left">
             <form
-              action="/search"
+              action="../sanpham/sanpham.html"
               method="get"
               class="search-bar"
               autocomplete="off"
@@ -409,7 +409,7 @@
       <div class="container">
         <ul class="breadcrumb">
           <li class="home">
-            <a href="/"><span>Trang chủ</span></a>
+            <a href="../index.html"><span>Trang chủ</span></a>
             <span class="mr_lr"
               >&nbsp;<i class="fa fa-angle-right"></i>&nbsp;</span
             >
@@ -820,7 +820,7 @@
                       >Sản phẩm</a
                     >
                   </li>
-                  <li><a href="../tin-tuc" title="Tin tức">Tin tức</a></li>
+                  <li><a href="../tintuc.html" title="Tin tức">Tin tức</a></li>
                   <li><a href="../lienhe.html" title="Liên hệ">Liên hệ</a></li>
                 </ul>
               </nav>
