--- a/News_Section/huong_dan.html
+++ b/News_Section/huong_dan.html
@@ -128,7 +128,7 @@
     <div class="header-main">
       <div class="header-left">
         <!-- Chặn autofill & gõ dấu ok -->
-        <form action="/search" method="get" class="search-bar" autocomplete="off">
+        <form action="../sanpham/sanpham.html" method="get" class="search-bar" autocomplete="off">
           <input type="text" name="query" placeholder="Tìm kiếm"
                  autocomplete="off" autocapitalize="off" autocorrect="off"
                  spellcheck="false" inputmode="search" />
@@ -163,7 +163,7 @@
     <li><a href="../lienhe.html">LIÊN HỆ</a></li>
   </ul>
 </nav>
-
+  
 <!-- Search -> điều hướng sang trang sản phẩm với ?q= -->
 <script>
 (function (w, d) {
@@ -214,7 +214,7 @@
   <div class="container">
     <ul class="breadcrumb">
       <li class="home">
-        <a href="/"><span>Trang chủ</span></a>
+        <a href="../index.html"><span>Trang chủ</span></a>
         <span class="mr_lr">&nbsp;<i class="fa fa-angle-right"></i>&nbsp;</span>
       </li>
       <li>
