--- a/checkout.html
+++ b/checkout.html
@@ -32,7 +32,7 @@
         <div class="header-main">
           <div class="header-left">
             <form
-              action="/search"
+              action="./sanpham/sanpham.html"
               method="get"
               class="search-bar"
               autocomplete="off"
@@ -90,7 +90,7 @@
             d.querySelector('nav.main-nav a[href*="/sanpham"]');
           return a && a.getAttribute("href")
             ? a.getAttribute("href")
-            : "/sanpham/sanpham.html";
+            : "./sanpham/sanpham.html";
         }
         var form = d.querySelector(".search-bar");
         if (!form) return;
