--- a/sanpham/pages/product_detail.html
+++ b/sanpham/pages/product_detail.html
@@ -449,7 +449,7 @@
         <div class="header-main">
           <div class="header-left">
             <form
-              action="/search"
+              action="../sanpham.html"
               method="get"
               class="search-bar"
               autocomplete="off"
