--- a/account/orders.html
+++ b/account/orders.html
@@ -30,7 +30,7 @@
           <div class="header-left">
             <!-- Search => /sanpham/sanpham.html?q= -->
             <form
-              action="/search"
+              action="../sanpham/sanpham.html"
               method="get"
               class="search-bar"
               autocomplete="off"
