--- a/account/profile.html
+++ b/account/profile.html
@@ -27,7 +27,7 @@
           <div class="header-left">
             <!-- Chặn autofill & gõ dấu ok -->
             <form
-              action="/search"
+              action="../sanpham/sanpham.html"
               method="get"
               class="search-bar"
               autocomplete="off"
